@@ -26,6 +26,8 @@ Revision 4.2.2
 - When running on Python3, SMI will re-raise exceptions with the original
   traceback for easier diagnostics.
 - Out of PYTHONPATH MIB paths now supported.
+- Fix to oneliner getnext/getbulk response table rectangulation procedure
+  to gracefully handle an empty column condition.
 - Fix to legacy MibBuilder.getMibPath() to prevent it from missing
   .egg-based components in path.
 - Fix to oneliner configuration routine that used to implicitly
